# Pi-pico-CMakeLists-Template

./: CMakeLists.txt  README.md  main.c
